# shadowfleet_owners

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
data/db/: ais.csv  companies.csv  for_inspection.csv  loitering.csv  sanctions.csv  sts_events.csv  uninsured.csv  vessel_company.csv  vessel_flags.csv  vessel_inspections.csv  vessel_mmsi.csv  vessel_names.csv  vessels.csv
notebooks/: analysis.ipynb  commodity_traders.ipynb  create_timeline.ipynb  data_import_and_cleaning.ipynb  excel_prep.ipynb  gfw.ipynb  oil_flows.ipynb  ownership.ipynb  postgresql_prep.ipynb  vessels_summary.ipynb
sql/: inspections_flags_names_companies.sql  port_visits.sql  port_visits_while_uninsured.sql  reflagging.sql  vessels_with_companies.sql
src/: shadowfleet.py
